feat: add image grid

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <a href="src/0/index.html">Explorations - 000</a>
       <a href="src/1/index.html">Explorations - 001</a>
       <a href="src/2/index.html">Explorations - 002</a>
+      <a href="src/3/index.html">Explorations - 003</a>
     </div>
   </body>
 </html>
