feat: add onLoad animation for Exp3

--- a/src/3/index.html
+++ b/src/3/index.html
@@ -8,46 +8,7 @@
   </head>
   <body>
     <canvas id="stage"></canvas>
-
-    <div class="column">
-      <div class="row">
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-      </div>
-      <div class="row">
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-      </div>
-      <div class="row">
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-        <div class="rect"></div>
-      </div>
-    </div>
-
+    <div class="cover"></div>
     <script type="module" src="./script.ts"></script>
   </body>
 </html>
