feat: add interactions

--- a/src/3/index.html
+++ b/src/3/index.html
@@ -10,5 +10,21 @@
     <canvas id="stage"></canvas>
     <div class="cover"></div>
     <script type="module" src="./script.ts"></script>
+
+    <div class="content">
+      <div class="text text-1">
+        <div><span>Oh this sensation</span></div>
+        <div><span>Could it be hallucination?</span></div>
+        <div><span>What I feel, is it real?</span></div>
+        <div><span>Or just a mind creation?</span></div>
+      </div>
+      <div class="text text-2">
+        <div><span>Wish away nightmare</span></div>
+        <div><span>You got a light you can feel it on your back</span></div>
+        <div><span>A light you can feel it on your back</span></div>
+        <div><span>Jigsaw falling into place</span></div>
+      </div>
+    </div>
+    <div class="back-btn">← Home</div>
   </body>
 </html>
