--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   </head>
   <body>
     <div class="main">
-      <a href="src/0/index.html">Explorations - 000</a>
-      <a href="src/1/index.html">Explorations - 001</a>
-      <a href="src/2/index.html">Explorations - 002</a>
-      <a href="src/3/index.html">Explorations - 003</a>
+      <a href="src/0/index.html">Explorations — 000</a>
+      <a href="src/1/index.html">Explorations — 001</a>
+      <a href="src/2/index.html">Explorations — 002</a>
+      <a href="src/3/index.html">Explorations — 003</a>
+      <a href="src/4/index.html">Explorations — 004</a>
+      <a href="src/5/index.html">Explorations — 005</a>
     </div>
   </body>
 </html>
